--- a/lms/src/main/resources/application.properties
+++ b/lms/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=lms
+
+# ===============================
+# = DATABASE CONFIGURATION
+# ===============================
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/loan-management-system
+spring.datasource.username=postgres
+spring.datasource.password=Tamer@30
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# = JPA / HIBERNATE SETTINGS
+# ===============================
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
